# src/notification/infra/https/routes/notification.routes.ts
@@ -1,10 +1,22 @@
-import { Router } from "express";
-import { sendNotificationFactory } from "../controllers";
+import { Router } from 'express';
+import {
+  listNotificationsFactory,
+  readNotificationFactory,
+  sendNotificationFactory,
+} from '../controllers';
 
 const notificationRoutes = Router({ mergeParams: true });
 
-notificationRoutes.post("/", (req, res) =>
+notificationRoutes.post('/', (req, res) =>
   sendNotificationFactory.handle(req, res)
 );
+
+notificationRoutes.patch('/:notificationId/read/:recipientId', (req, res) => {
+  readNotificationFactory.handle(req, res);
+});
+
+notificationRoutes.get('/:recipientId', (req, res) => {
+  listNotificationsFactory.handle(req, res);
+});
 
 export { notificationRoutes };
